# PolisEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: CMakeLists.txt
data/Shaders/: area_light_fragment.glsl  deferred_fragment.glsl  deferred_vertex.glsl  directional_fragment.glsl  forward_vertex_only_position.glsl  post_processing.glsl  text_fragment.glsl  text_vertex.glsl  ui_fragment.glsl  ui_vertex.glsl
demo/: Main.lua
include/: AreaLight.h  BoundingVolume.h  Camera.h  CameraUpdator.h  Character.h  Debug.h  DirectionalLight.h  Engine.h  Font.h  FontLoader.h  FullscreenRenderer.h  GLDebug.h  InputCallback.h  InputManager.h  KeyCode.h  LuaBridger.h  LuaCallback.h  LuaComponents.h  LuaDebug.h  LuaEntity.h  LuaGLM.h  LuaInput.h  LuaResource.h  LuaTime.h  LuaUI.h  LuaWindow.h  LuaWorld.h  Mesh.h  MeshLoader.h  Primitives.h  Rect.h  Renderable.h  Rendering.h  ResourceLoader.h  Scene.h  SceneObject.h  ScriptRef.h  ScriptUpdator.h  Shader.h  ShaderLoader.h  (+15 more)
src/: CMakeLists.txt  Debug.cpp  Engine.cpp  FontLoader.cpp  FullscreenRenderer.cpp  InputCallback.cpp  InputManager.cpp  KeyCode.cpp  LuaBridger.cpp  LuaCallback.cpp  LuaComponents.cpp  LuaDebug.cpp  LuaGLM.cpp  LuaInput.cpp  LuaResource.cpp  LuaTime.cpp  LuaUI.cpp  LuaWindow.cpp  LuaWorld.cpp  Mesh.cpp  MeshLoader.cpp  Rendering.cpp  ResourceLoader.cpp  Scene.cpp  ScriptRef.cpp  ScriptUpdator.cpp  ShaderLoader.cpp  ShaderProgram.cpp  ShaderProgramLoader.cpp  TextRender.cpp  TextureLoader.cpp  Timer.cpp  UI.cpp  UIElement.cpp  UIImage.cpp  UILabel.cpp  UIRect.cpp  Window.cpp  main.cpp
