add_executable(PolisEngine main.cpp
	"Debug.cpp"
	"Engine.cpp"
	"FontLoader.cpp"
	"FullscreenRenderer.cpp"
	
	"InputCallback.cpp"
	"InputManager.cpp"
	"KeyCode.cpp"
	"LuaBridger.cpp"
	"LuaCallback.cpp"
	"LuaComponents.cpp"
	"LuaDebug.cpp"
	"LuaGLM.cpp"
	"LuaInput.cpp"
	"LuaResource.cpp"
	"LuaTime.cpp"
	"LuaUI.cpp"
	"LuaWorld.cpp"
	"Mesh.cpp"
	"MeshLoader.cpp"
	"Rendering.cpp"
	"ResourceLoader.cpp"
	"ScriptRef.cpp"
	"ScriptUpdator.cpp"
	"ShaderLoader.cpp"
	"ShaderProgram.cpp"
	"ShaderProgramLoader.cpp"
	"TextRender.cpp"
	"TextureLoader.cpp"
	"Timer.cpp"
	"UI.cpp"
	"UIElement.cpp"
	"UIImage.cpp"
	"UILabel.cpp"
	"UIRect.cpp"
	"Window.cpp"
  "Scene.cpp" "LuaWindow.cpp")